# crisprware

./: ..gitignore.swp  .gitignore  .readthedocs.yaml  BMDM.gtf.REMOVED.git-id  BMDM_n3.gtf.REMOVED.git-id  FilterKmerBED  GenerateKmerBED  MANIFEST.in  PlotGuideScores.ipynb  ProcessAnnotation  README.md  SPI1.gff3  SPI1.gff3.db  ScoreKmers  ScoringGuides.ipynb  Scratch.ipynb.REMOVED.git-id  Untitled.ipynb  environment.yml  filtered_file.csv  finalKmers.bed  gscan.csv  guideScanOut.csv  guideScanOut_complete.csv  kmers.bed.REMOVED.git-id  license.txt  out.bed  pam_adjacent_20mers_with_info.txt.REMOVED.git-id  pyproject.toml  setup.py  stdout  test.REMOVED.git-id  trimmed.gtf  trimmedAnnotation.gff
.github/workflows/: environment-ci.yml  lint.yml  release-crispr-ots.yml  tests.yml
.ipynb_checkpoints/: FilterKmerBED-checkpoint  ScoringGuides-checkpoint.ipynb  Scratch-checkpoint.ipynb.REMOVED.git-id
Index/: test.reverse  testsubset.fasta.forward.dna
Index/tmp/: testmerged.bed
_tmp/: guideScanOut.csv  loc_filtered_guides.tsv  trimmedAnnotation.gtf
annotations/: TSS_consensus_filtered_chr19_ucsc_mm39.ncbiRefSeq.bed  TSS_meta_filtered_chr19_ucsc_mm39.ncbiRefSeq.bed  consensus_filtered_chr19_ucsc_mm39.ncbiRefSeq.gtf  filtered_chr19_ucsc_mm39.ncbiRefSeq.gtf  meta_filtered_chr19_ucsc_mm39.ncbiRefSeq.gtf  remove_a2b1_tscripts.txt  tpmfilter_Hnrnpa2b1_coding.gtf
annotations/annotations/: consensus_tpmfilter_Hnrnpa2b1_coding.gtf  meta_tpmfilter_Hnrnpa2b1_coding.gtf
annotations/intermediateFiles/: filtered_chr19_ucsc_mm39.ncbiRefSeq.tsv  tx2gene.tsv
colab_notebooks/: CRISPRware_Tutorial.ipynb  NGS_Tutorial.ipynb  RiceGenome_tutorial.ipynb
conda-recipe/: build_local_channel.sh
conda-recipe/crispr-ots/: meta.yaml
crispr-ots/: .gitignore  BENCHMARKS.md  Cargo.toml  HANDOFF.md  NOTES.md  clippy.toml
crispr-ots/.cargo/: config.toml
crispr-ots/crates/crispr-cli/: Cargo.toml
crispr-ots/crates/crispr-cli/src/: build.rs  csv_out.rs  discover.rs  kmers_csv.rs  lib.rs  main.rs  ot_stream.rs  tsv.rs
crispr-ots/crates/crispr-cli/tests/: chr22_equivalence.rs  cli_cfd_chr22_1000.rs  cli_cfd_equivalence.rs  cli_guidescan2_equivalence.rs
crispr-ots/crates/crispr-db/: Cargo.toml
crispr-ots/crates/crispr-db/src/: bin.rs  fasta.rs  finder.rs  lib.rs  mmap_db.rs  packed.rs  position.rs  source.rs
crispr-ots/crates/crispr-encoding/: Cargo.toml
crispr-ots/crates/crispr-encoding/src/: base.rs  enzyme.rs  lib.rs  mismatch.rs  site.rs
crispr-ots/crates/crispr-scan/: Cargo.toml
crispr-ots/crates/crispr-scan-gpu/: Cargo.toml
crispr-ots/crates/crispr-scan-gpu/examples/: allvsall_bench.rs  multi_gpu_allvsall.rs  selfscan_bench.rs
crispr-ots/crates/crispr-scan-gpu/src/: lib.rs
crispr-ots/crates/crispr-scan/src/: bin_scanner.rs  lib.rs
crispr-ots/crates/crispr-score/: Cargo.toml
crispr-ots/crates/crispr-score/src/: cas12a.rs  cfd.rs  lib.rs
crispr-ots/crates/crispr-score/tests/: cas12a_parasol_validate.rs
crispr-ots/mm39-bench/: binwidth_sweep.sh  binwidth_sweep.tsv  compare_specs.py  make_guides.py  make_guides_cpf1.py  random_1000.fasta  random_1000.kmers.csv  run_flashfry_chunked.sh
crisprware/: cli.py  generate_guides.py  index_genome.py  preprocess_annotation.py  rank_guides.py  score_guides.py  ucsc_track.py
crisprware.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
crisprware/scorers/: deepcpf1.py  deephf.py  deepspcas9.py  enpam_gb.py  enseq_deepcpf1.py  seq_deepcpf1variants.py
crisprware/utils/: dna_sequence_functions.py  gtf_bed_processing_functions.py  quantified_rna_functions.py  rank_guides_functions.py  utility_functions.py
docker/: dockerfile
docs/: Makefile  requirements.txt
docs/source/: command_reference.md  conf.py  index.md  installation.md  ngs.md  quickstart.md  references.md  tutorials.md
docs/tutorials/: genome_wide_cas12a_ucsc_track.md
final/: AllScoredGuides.tsv  SelectedScoredGuides.tsv
parasol_scripts/: DeepCpf1_seq.py  EnPAMGB.py  combine_on_off_tsvs.py  generate_cfd_scripts.sh  generate_deepcpf1_scripts.sh  generate_enpam_scripts.sh  score_flashfry_cfd.py  sgrna_bed_to_fasta.py  slim_offtarget_tsv.py  split_tsv.py
scripts/: .Rhistory  .~lock.test.tsv#  allele_specific_guides.py  bigwig_to_signalwindow.py  combine_tsvs.py  crisprscore.R  crisprscore_multi.R  gtf_from_price.py  gtf_from_ribotish.py  preprocess_5pam_scoring.py  rank_genes_by_isoform_counts.py  replace_snps.py  stitch_bed_to_fasta.py  update_gff.py
scripts/plotting/: CorrelationHeatmap.ipynb  bucket_by_target_id.py  make_dot_plot.py
scripts/ucsc_gb_scripts/: README.md  cas12aTargets.as  chunk_guides.py  merge_tracks.py
src/: FilterKmerBED  GenerateKmersMultiprocess  PreprocessAnnotation  RankGuides  ScoreKmers  generate_guides.py  index_genome.py  preprocess_annotation.py  rank_guides.py  ribotish_to_gtf.py  score_guides.py
test/sgRNAs/: ATAC.bed  LOUP Manuscript_bibliography_final_editsV2.docx
tests/: test_cli.py  test_deepcpf1.py  test_deephf.py  test_deepspcas9.py  test_dna_sequence_functions.py  test_enpam_gb.py  test_enseq_deepcpf1.py  test_generate_guides.py  test_gtf_bed_processing_functions.py  test_quantified_rna_functions.py  test_rank_guides_functions.py  test_score_flashfry_cfd.py  test_score_guides_cas12a.py  test_score_guides_functions.py  test_seq_deepcpf1variants.py  test_ucsc_track.py  test_utility_functions.py
tests/test_data/: GSE141750_counts_matrix.xlsx  Hnrnpa2b1.gtf  Hnrnpa2b1_coding.gtf  Hnrnpa2b1_non_coding.gtf  (+13 more)
tmp/: guideScanOut.csv  kmers.bed.REMOVED.git-id  scored_guides_for_guidescan.csv  trimmedAnnotation.gff
tools/: benchmark_cas12a_baselines.py  extract_chen_2025_weights.py  extract_enpam_gb.py  fetch_cas12a_data.py  portable_enpam_gb_weights.py  train_cas12a_v1.py
utils/: FilterKmerBED  GenerateKmers  GenerateKmersMultiprocess  PreprocessAnnotation  RankGuides  ScoreKmers  _GenerateKmers  _GenerateKmersMultiprocess  _ScoreKmers  __GenerateKmersMultiprocess  dna_sequence_functions.py  gtf_bed_processing_functions.py  quantified_rna_functions.py  rank_guides_functions.py  utility_functions.py
(+108 files in other folders)
