[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crisprware"
dynamic = ["version"]
description = "Tools for CRISPR-based genome editing analysis."
readme = "README.md"
license = {text = "UC Santa Cruz Noncommercial License"}
requires-python = ">=3.8,<3.12"
authors = [
    {name = "Eric Malekos", email = "ericmalekos@gmail.com"},
]
keywords = ["genome editing", "CRISPR", "bioinformatics"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pybedtools>=0.9",
    "rs3>=0.0.15",
    "biopython>=1.8",
    "lightgbm==3.3.5",
    "pybigwig",
    "pandas",
    "numpy",
    "tensorflow>=2.13,<2.16",
    "h5py>=3.10",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "ViennaRNA>=2.4",
]

[project.urls]
Homepage = "https://github.com/ericmalekos/crisprware"

[project.scripts]
crisprware = "crisprware.cli:main"

[tool.setuptools.dynamic]
version = {attr = "crisprware.version.__version__"}

[tool.setuptools.packages.find]
include = ["crisprware*", "parasol_scripts*"]

[tool.setuptools.package-data]
"crisprware.scorers" = ["weights/*.h5", "weights/*.joblib"]

[tool.setuptools]
script-files = [
    "scripts/allele_specific_guides.py",
    "scripts/bigwig_to_signalwindow.py",
    "scripts/crisprscore.R",
    "scripts/crisprscore_multi.R",
    "scripts/gtf_from_ribotish.py",
    "scripts/gtf_from_price.py",
    "scripts/replace_snps.py",
]

[tool.ruff]
line-length = 120
exclude = [
    "pipeline_testing",
    "colab_notebooks",
    "bigbed_fulltracks",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # line too long — handled by formatter where possible
    "E701",  # multiple statements on one line — common in compact bioinformatics code
    "E702",  # semicolon-separated statements
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["F401", "F841"]  # utility scripts may have intentional unused imports/vars
"parasol_scripts/DeepCpf1_seq.py" = ["E741"]  # third-party adapted code
"tools/*" = ["E402", "F841"]    # tool scripts intentionally sys.path.insert before importing crisprware
"tests/*" = ["E402"]            # tests do the same path-insert dance
"crispr-ots/mm39-bench/*" = ["E741", "F841"]  # benchmark helpers: `l` line index, intentionally-assigned PAM kept for readability
