[workspace]
resolver = "2"
members = [
    "crates/crispr-encoding",
    "crates/crispr-db",
    "crates/crispr-scan",
    "crates/crispr-score",
    "crates/crispr-cli",
    "crates/crispr-scan-gpu",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
# 1.89 is the first stable rustc with the AVX-512 512-bit intrinsics
# (`_mm512_popcnt_epi64`, `_mm512_loadu_si512`, …) used by the VPOPCNTDQ
# scan kernel in crispr-scan. The AVX2/scalar paths still build on older
# toolchains, but the workspace as a whole now requires 1.89+.
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/ericmalekos/crispr-ots"
authors = ["Eric Malekos <ericmalekos@gmail.com>"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_debug_implementations = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
opt-level = 1
