[package]
name = "crispr-encoding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "2-bit DNA encoding, IUPAC PAM expansion, and enzyme configuration"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
