[package]
name = "crispr-score"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Scoring metrics (CFD on day 1) operating on bit-encoded sites"

[lints]
workspace = true

[dependencies]
crispr-encoding = { path = "../crispr-encoding" }
